--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -54,8 +54,9 @@
 					<p>Goal: all pigs turn to angry birds. <br>
 					Instruction: when a pig is clicked, he and his neighbor will change to angry bird, if all pigs become to angry birds, you win ... try youself :)</p>
 
-					<p>Le but : Changer les couchons à angry birds <br>
-					Quand vous cliquez un couchon, lui et ses voisins vont devenir angry bird, si tous les couchons devenu angry birds, vous gagnez !</p>
+					<p>Le but : Changer les cochons en angry birds <br>
+					Quand vous cliquez un cochon, lui et ses voisins touchés horizontals et verticals vont devenir angry bird, si tous les cochons devenu angry birds, vous gagnez !</p>
+					<p>Chinese version is coming soon ! </p>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-success" data-dismiss="modal">GO</button>
