update index.html puzzle

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -55,7 +55,8 @@
 					Instruction: when a pig is clicked, he and his neighbor will change to angry bird, if all pigs become to angry birds, you win ... try youself :)</p>
 
 					<p>Le but : Changer les cochons en angry birds <br>
-					Quand vous cliquez un cochon, lui et ses voisins touchés horizontals et verticals vont devenir angry bird, si tous les cochons devenu angry birds, vous gagnez !</p>
+					Quand vous cliquez sur un cochon, lui et ses voisins proches horizontalement et verticalement vont devenir angry bird. Si tous les cochons sont devenus angry birds, vous gagnez la partie !</p>
+					
 					<p>Chinese version is coming soon ! </p>
 				</div>
 				<div class="modal-footer">
