Change chinese instruction

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -18,7 +18,7 @@
 	code{white-space: normal;}
 	.comments_warp{margin-top: 650px;}
 	</style>
-	
+
 </head>
 
 <body>
@@ -56,8 +56,10 @@
 
 					<p>Le but : Changer les cochons en angry birds <br>
 					Quand vous cliquez sur un cochon, lui et ses voisins proches horizontalement et verticalement vont devenir angry bird. Si tous les cochons sont devenus angry birds, vous gagnez la partie !</p>
-					
-					<p>Chinese version is coming soon ! </p>
+
+					<p>使用说明 ! <br>
+					点一个猪头，它和它邻近水平和竖直的猪头都会变成angry bird，以此类推，当所有猪头都变成angry bird，你就赢了！
+					</p>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-success" data-dismiss="modal">GO</button>
