change the images for puzzle

--- a/puzzle/index.html
+++ b/puzzle/index.html
@@ -51,14 +51,14 @@
 					<h4 class="modal-title">Instruction</h4>
 				</div>
 				<div class="modal-body">
-					<p>Goal: all pigs turn to angry birds. <br>
-					Instruction: when a pig is clicked, he and his neighbor will change to angry bird, if all pigs become to angry birds, you win ... try youself :)</p>
+					<p>Goal: all croissants turn to cakes. <br>
+					Instruction: when a croissant is clicked, it and its adjacents neighbors will change to cake, if all croissants become to cakes, you win ... try youself :)</p>
 
-					<p>Le but : Changer les cochons en angry birds <br>
-					Quand vous cliquez sur un cochon, lui et ses voisins proches horizontalement et verticalement vont devenir angry bird. Si tous les cochons sont devenus angry birds, vous gagnez la partie !</p>
+					<p>Le but : Changer les croissants en gâteaux <br>
+					Quand vous cliquez sur un croissant, lui et ses voisins proches horizontalement et verticalement vont devenir un gâteau. Si tous les croissants sont devenus gâteaux, vous gagnez la partie !</p>
 
 					<p>使用说明 ! <br>
-					点一个猪头，它和它邻近水平和竖直的猪头都会变成angry bird，以此类推，当所有猪头都变成angry bird，你就赢了！
+					当点击一个羊角面包时，它和它邻近水平和竖直的羊角都会变成蛋糕，以此类推，当所有羊角都变成蛋糕，你就赢了！
 					</p>
 				</div>
 				<div class="modal-footer">
