--- a/bookmark/index.html
+++ b/bookmark/index.html
@@ -24,6 +24,8 @@
 <div class="searchBox">
   <label>Search by keyword:</label><br/>
   <input type="text" class="typeahead tt-query" autocomplete="off" spellcheck="false" placeholder="bookmark">
+
+<button name="search">search</button>
 </div>
 </body>
 </html>
