--- a/bookmark/index.html
+++ b/bookmark/index.html
@@ -25,7 +25,7 @@
   <label>Search by keyword:</label><br/>
   <input type="text" class="typeahead tt-query" autocomplete="off" spellcheck="false" placeholder="bookmark">
 
-<button name="search">search</button>
+<button id="search">search</button>
 </div>
 </body>
 </html>
