update js for bookmark

--- a/bookmark/index.html
+++ b/bookmark/index.html
@@ -19,7 +19,8 @@
     <input type="text" id="keyword" class="typeahead tt-query" autocomplete="off" spellcheck="false" placeholder="Search Bookmark Category">
     <button id="search" type="button" class="btn btn-primary">search</button>
   </div>
-
+  <p id="tag">
+  </p>
   <ul class="searchResult">
   </ul>
 </body>
