--- a/bookmark/index.html
+++ b/bookmark/index.html
@@ -20,6 +20,7 @@
     <button id="search" type="button" class="btn btn-primary">search</button>
   </div>
   <p id="tag">
+    These followings keywords you can use: <br>
   </p>
   <ul class="searchResult">
   </ul>
