--- a/pinterest/index.html
+++ b/pinterest/index.html
@@ -1,41 +1,16 @@
 <!DOCTYPE html>
 <head>
-<title>List all sites</title>
+  <title>List all sites</title>
 
-<link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main.css">
+  <script src="js/jquery.min.js"></script>
+  <script src="js/main.js"></script>
 </head>
 
 <body>
-<div id="wrapper">
-	<div id="columns">
-		<div class="pin">
-			<a href="http://jspractice.com/alias/">
-				<img src="img/alias.png" />
-				<p>
-					A demo site. Original idea from ALIAS.
-				</p>
-			</a>
-		</div>
-
-		<div class="pin">
-			<a href="http://jspractice.com/puzzle/">
-				<img src="img/puzzle.png" />
-				<p>
-					A site of puzzle.
-				</p>
-			</a>
-		</div>
-
-		<div class="pin">
-			<a href="http://jspractice.com/sudoku/">
-				<img src="img/sudoku.png" />
-				<p>
-					Sudoku solver !
-				</p>
-			</a>
-		</div>
-
-	</div>
-</div>
+  <div id="wrapper">
+    <div id="columns">
+    </div>
+  </div>
 </body>
 </html>
