--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
     			<header>
     				<h1><strong>Bo's</strong> sites</h1>
     				<h2>Developpment can be a hobby, so does here  :)</h2>
+            <h2>To welcome you, here is login and password : "bo" for the 2.</h2>
+            <h2>You can find my sites: demo, cv, bookmark etc.</h2>
+            <h2>If you want to follow my activities, thank you to follow my blog :
+              <strong>
+                <a href="http://cuiborails.wordpress.com">cuiborails.wordpress.com</a>
+              </strong>
+            </h2>
     			</header>
 
     			<section class="main">
