add _data to _config.yml that js could call

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: login
 
 <div class="container">
   <header>
-    <h1>Bo's <strong>Bookmarks</strong> Login</h1>
+    <h1>Welcome <strong>Bo's</strong> personal site</h1>
 
     <h2>Site under construction...</h2>
 
