add control search datatable

--- a/pourphilippe/index.html
+++ b/pourphilippe/index.html
@@ -39,7 +39,7 @@
 							<span class="glyphicon glyphicon-search"></span>
 						</button>
 				      </span>
-				      <input type="text" class="form-control" placeholder="Recherche un ocde ou un libellé">
+				      <input type="text" class="form-control" placeholder="Recherche un code ou un libellé" id="recherche">
 				    </div><!-- /input-group -->
 				</div><!-- /.row -->
 				
