--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ layout: login
   <header>
     <h1>Welcome <strong>Bo's</strong> personal site</h1>
 
-    <h2>Site under construction...</h2>
+    <h2>Site under long time construction...</h2>
 
     <h2>Developpment can be a hobby, so does it for me  :)</h2>
-    <h2>You can find my sites: demo, cv, bookmark etc.</h2>
+    <h2>You can find my sites: demo, cv, bookmark etc.(just type enter to continue)</h2>
     <h2>If you want to follow my activities, find in my blog :</h2>
     <a href="http://cuiborails.wordpress.com">cuiborails.wordpress.com</a>
   </header>
@@ -17,11 +17,11 @@ layout: login
   <section class="main">
     <div class="form-1">
       <p class="field">
-        <input type="text" name="login" placeholder="Username">
+        <input type="text" name="login" placeholder="bo">
         <i class="icon-user icon-large"></i>
       </p>
       <p class="field">
-        <input type="password" name="password" placeholder="Password">
+        <input type="password" name="password" placeholder="bo">
         <i class="icon-lock icon-large"></i>
       </p>
       <p class="submit">
