--- a/aa/index.html
+++ b/aa/index.html
@@ -1,14 +1,190 @@
-<!doctype html>
-<html ng-app>
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
-  </head>
-  <body>
-    <div>
-      <label>Name:</label>
-      <input type="text" ng-model="yourName" placeholder="Enter a name here">
-      <hr>
-      <h1>Hello {{yourName}}!</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="bo">
+
+    <title>Barbecue</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="css/round-about.css" rel="stylesheet">
+
+</head>
+
+<body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Barbecue</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container">
+
+        <!-- Introduction Row -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">一起去吃Barbecue
+                    <small></small>
+                </h1>
+                <p>把买东西的费用填上，自动计算每个人要付多少</p>
+                <p>根据大家的输入，这次barbecue一共花了: <b id="totalCost"></b> €</p>
+            </div>
+        </div>
+
+        <!-- Team Members Row -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h2 class="page-header">人员（按照片站位）</h2>
+            </div>
+            <div class="col-lg-12 col-sm-12 text-center">
+                <img class="img-circle img-responsive img-center" src="img/1.gif" alt="">
+                <h3>林林
+                    <small>大力士</small>
+                </h3>
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-info">
+                    消耗：<input type="text" placeholder="花了多少银子？" id="1" class="money" pattern="^\d+$"> €
+                  </li>
+                  <li class="list-group-item list-group-item-success">按照目前金额数，应收： <b id="in1"></b>€</li>
+                  <li class="list-group-item list-group-item-warning">按照目前金额数，应付： <b id="out1"></b>€</li>
+                </ul>
+            </div>
+            <div class="col-lg-12 col-sm-12 text-center">
+                <img class="img-circle img-responsive img-center" src="img/2.gif" alt="">
+                <h3>祖寅
+                    <small>千里眼顺风耳</small>
+                </h3>
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-info">
+                    消耗：<input type="text" placeholder="花了多少银子？" id="2" class="money" pattern="^\d+$"> €
+                  </li>
+                  <li class="list-group-item list-group-item-success">按照目前金额数，应收： <b id="in2"></b>€</li>
+                  <li class="list-group-item list-group-item-warning">按照目前金额数，应付： <b id="out2"></b>€</li>
+                </ul>
+            </div>
+            <div class="col-lg-12 col-sm-12 text-center">
+                <img class="img-circle img-responsive img-center" src="img/3.gif" alt="">
+                <h3>莱茵and波
+                    <small>钢筋铁骨</small>
+                </h3>
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-info">
+                    消耗：<input type="text" placeholder="花了多少银子？" id="3" class="money" pattern="^\d+$"> €
+                  </li>
+                  <li class="list-group-item list-group-item-success">按照目前金额数，应收： <b id="in3"></b>€</li>
+                  <li class="list-group-item list-group-item-warning">按照目前金额数，应付： <b id="out3"></b>€</li>
+                </ul>
+            </div>
+            <div class="col-lg-12 col-sm-12 text-center">
+                <img class="img-circle img-responsive img-center" src="img/4.gif" alt="">
+                <h3>匪
+                    <small>火娃</small>
+                </h3>
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-info">
+                    消耗：<input type="text" placeholder="花了多少银子？" id="4" class="money" pattern="^\d+$"> €
+                  </li>
+                  <li class="list-group-item list-group-item-success">按照目前金额数，应收： <b id="in4"></b>€</li>
+                  <li class="list-group-item list-group-item-warning">按照目前金额数，应付： <b id="out4"></b>€</li>
+                </ul>
+            </div>
+            <div class="col-lg-12 col-sm-12 text-center">
+                <img class="img-circle img-responsive img-center" src="img/5.gif" alt="">
+                <h3>老大
+                    <small>水娃</small>
+                </h3>
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-info">
+                    消耗：<input type="text" placeholder="花了多少银子？" id="5" class="money" pattern="^\d+$"> €
+                  </li>
+                  <li class="list-group-item list-group-item-success">按照目前金额数，应收： <b id="in5"></b>€</li>
+                  <li class="list-group-item list-group-item-warning">按照目前金额数，应付： <b id="out5"></b>€</li>
+                </ul>
+            </div>
+            <div class="col-lg-12 col-sm-12 text-center">
+                <img class="img-circle img-responsive img-center" src="img/6.gif" alt="">
+                <h3>老朴
+                    <small>隐身人</small>
+                </h3>
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-info">
+                    消耗：<input type="text" placeholder="花了多少银子？" id="6" class="money" pattern="^\d+$"> €
+                  </li>
+                  <li class="list-group-item list-group-item-success">按照目前金额数，应收： <b id="in6"></b>€</li>
+                  <li class="list-group-item list-group-item-warning">按照目前金额数，应付： <b id="out6"></b>€</li>
+                </ul>
+            </div>
+            <div class="col-lg-12 col-sm-12 text-center">
+                <img class="img-circle img-responsive img-center" src="img/7.gif" alt="">
+                <h3>小杨
+                    <small>金手指？</small>
+                </h3>
+                <ul class="list-group">
+                  <li class="list-group-item list-group-item-info">
+                    消耗：<input type="text" placeholder="花了多少银子？" id="7" class="money" pattern="^\d+$"> €
+                  </li>
+                  <li class="list-group-item list-group-item-success">按照目前金额数，应收： <b id="in7"></b>€</li>
+                  <li class="list-group-item list-group-item-warning">按照目前金额数，应付： <b id="out7"></b>€</li>
+                </ul>
+            </div>
+        </div>
+
+        <hr>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; 哥临时搞的，见笑了！</p>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+        </footer>
+
     </div>
-  </body>
+    <!-- /.container -->
+
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
+
+    <!-- Main.js -->
+    <script src="js/main.js"></<script>
+
+    </script>
+
+</body>
+
 </html>
