--- a/aa/index.html
+++ b/aa/index.html
@@ -57,7 +57,7 @@
                 </h1>
                 <p>把买东西的费用填上，自动计算每个人要付多少</p>
                 <p>根据大家的输入，这次barbecue一共花了: <b id="totalCost"></b> €</p>
-                <p>平均每人: <b id="eachPay"></b> €</p>
+                <p>一共八个人，平均每人: <b id="eachPay"></b> €</p>
             </div>
         </div>
 
