--- a/euromillions/index.html
+++ b/euromillions/index.html
@@ -19,8 +19,12 @@
 
 <body>
   <div>
+<!--
     <input type="submit" class="button" id="chiffre" value="Generate 5 numbers"/>
     <input type="submit" class="button" id="etoile" value="Generate 2 stars"/>
+-->
+<button type="button" class="btn btn-primary" id="chiffre">Generate 5 numbers</button>
+<button type="button" class="btn btn-primary" id="etoile">Generate 2 stars</button>
   </div>
 
   <ul class="balls"></ul>
