--- a/euromillions/index.html
+++ b/euromillions/index.html
@@ -18,14 +18,15 @@
 </head>
 
 <body>
-  <div>
+  <div class="container">
+<div class="col-md-12">
 <!--
     <input type="submit" class="button" id="chiffre" value="Generate 5 numbers"/>
     <input type="submit" class="button" id="etoile" value="Generate 2 stars"/>
 -->
 <button type="button" class="btn btn-primary" id="chiffre">Generate 5 numbers</button>
 <button type="button" class="btn btn-primary" id="etoile">Generate 2 stars</button>
-  </div>
+ </div> </div>
 
   <ul class="balls"></ul>
   <ul class="stars"></ul>
