--- a/euromillions/index.html
+++ b/euromillions/index.html
@@ -24,8 +24,8 @@
     <input type="submit" class="button" id="chiffre" value="Generate 5 numbers"/>
     <input type="submit" class="button" id="etoile" value="Generate 2 stars"/>
 -->
-<button type="button" class="btn btn-primary" id="chiffre">Generate 5 numbers</button>
-<button type="button" class="btn btn-primary" id="etoile">Generate 2 stars</button>
+<button type="button" class="btn btn-primary btn-responsive" id="chiffre">Generate 5 numbers</button>
+<button type="button" class="btn btn-primary btn-responsive" id="etoile">Generate 2 stars</button>
  </div> </div>
 
   <ul class="balls"></ul>
