--- a/euromillions/index.html
+++ b/euromillions/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="css/main.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/main.js"></script>
-<meta name="viewport" content="width=device-width; initial-scale=1.0">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0">
 
 
 <!-- Latest compiled and minified CSS -->
@@ -21,14 +21,15 @@
 
 <body>
   <div class="container">
-<div class="col-md-12">
-<!--
-    <input type="submit" class="button" id="chiffre" value="Generate 5 numbers"/>
-    <input type="submit" class="button" id="etoile" value="Generate 2 stars"/>
--->
-<button type="button" class="btn btn-primary btn-responsive" id="chiffre">Generate 5 numbers</button>
-<button type="button" class="btn btn-primary btn-responsive" id="etoile">Generate 2 stars</button>
- </div> </div>
+    <div class="col-md-12">
+    <!--
+        <input type="submit" class="button" id="chiffre" value="Generate 5 numbers"/>
+        <input type="submit" class="button" id="etoile" value="Generate 2 stars"/>
+    -->
+    <button type="button" class="btn btn-primary btn-responsive" id="chiffre">Generate 5 numbers</button>
+    <button type="button" class="btn btn-primary btn-responsive" id="etoile">Generate 2 stars</button>
+     </div>
+  </div>
 
   <ul class="balls"></ul>
   <ul class="stars"></ul>
