--- a/euromillions4/index.html
+++ b/euromillions4/index.html
@@ -38,12 +38,16 @@
             </ol>
         </div>
 
-        <div class="col-md-11">
+        <div class="col-md-4">
             <button type="button" class="btn btn-primary btn-responsive" id="chiffre">Que la force soit avec nous !!! </button>
         </div>
 
-        <div class="col-md-11">
+        <br><br>
+
+        <div class="col-md-2">
             <p id="result1"></p>
+        </div>
+        <div class="col-md-2">
             <p id="result2"></p>
         </div>
     </div>
