--- a/euromillions4/index.html
+++ b/euromillions4/index.html
@@ -44,10 +44,10 @@
 
         <br><br>
 
-        <div class="col-md-2">
+        <div class="col-sm-2">
             <p id="result1"></p>
         </div>
-        <div class="col-md-2">
+        <div class="col-sm-2">
             <p id="result2"></p>
         </div>
     </div>
