--- a/euromillions4/index.html
+++ b/euromillions4/index.html
@@ -38,16 +38,16 @@
             </ol>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-sm-2">
             <button type="button" class="btn btn-primary btn-responsive" id="chiffre">Que la force soit avec nous !!! </button>
         </div>
 
         <br><br>
 
-        <div class="col-sm-2">
+        <div class="col-xs-2">
             <p id="result1"></p>
         </div>
-        <div class="col-sm-2">
+        <div class="col-xs-2">
             <p id="result2"></p>
         </div>
     </div>
