--- a/euromillions4/index.html
+++ b/euromillions4/index.html
@@ -39,7 +39,7 @@
         </div>
 
         <div class="col-sm-2">
-            <button type="button" class="btn btn-primary btn-responsive" id="chiffre">Que la force soit avec nous !!! </button>
+            <button type="button" class="btn btn-primary btn-responsive" id="chiffre">Que la force soit avec moi !!! </button>
         </div>
 
         <br><br>
