--- a/euromillions4/index.html
+++ b/euromillions4/index.html
@@ -44,7 +44,7 @@
 
         <br><br>
 
-        <div class="col-sm-12">
+        <div class="col-xs-12">
             <div class="col-xs-4">
                 <p id="result1"></p>
             </div>
