--- a/lesrestos/index.html
+++ b/lesrestos/index.html
@@ -1,251 +1,107 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="For fun">
+    <meta name="author" content="BO">
+    <title>Les Restaurants</title>
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link href="css/portfolio-item.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 
-<head>
-  <title>Place Autocomplete</title>
-  <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-  <meta charset="utf-8">
-
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <style>
-    html,
-    body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-    }
-
-    #map {
-      width: 50%;
-      height: 50%;
-      float: right;
-    }
-
-    #address {
-      width: 49%;
-      height: 50%;
-    }
-
-    #address p {
-      width: 99%;
-      min-height: inherit;
-    }
-
-    #address p:hover {
-      background-color: yellow;
-      cursor: pointer;
-    }
-
-    .controls {
-      margin-top: 10px;
-      border: 1px solid transparent;
-      border-radius: 2px 0 0 2px;
-      box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      height: 32px;
-      outline: none;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-    }
-
-    .search {
-      margin: 20px;
-      display: block;
-    }
-
-    #pac-input {
-      background-color: #fff;
-      font-family: Roboto;
-      font-size: 15px;
-      font-weight: 300;
-      margin-left: 12px;
-      padding: 0 11px 0 13px;
-      text-overflow: ellipsis;
-      width: 300px;
-    }
-
-    #pac-input:focus {
-      border-color: #4d90fe;
-    }
-
-    .pac-container {
-      font-family: Roboto;
-    }
-
-    #type-selector {
-      color: #fff;
-      background-color: #4d90fe;
-      padding: 5px 11px 0px 11px;
-    }
-
-    #type-selector label {
-      font-family: Roboto;
-      font-size: 13px;
-      font-weight: 300;
-    }
-  </style>
-</head>
-
-<body>
-  <div class="search">
-    <input id="pac-input" class="controls" type="text" placeholder="Enter a location">
-    <div id="type-selector" class="controls">
-      <input type="radio" name="type" id="changetype-all" checked="checked">
-      <label for="changetype-all">All</label>
-
-      <input type="radio" name="type" id="changetype-establishment">
-      <label for="changetype-establishment">Establishments</label>
-
-      <input type="radio" name="type" id="changetype-address">
-      <label for="changetype-address">Addresses</label>
-
-      <input type="radio" name="type" id="changetype-geocode">
-      <label for="changetype-geocode">Geocodes</label>
-    </div>
-  </div>
-
-      <div id="map"></div>
-
-      <div id="address">
-        <p id="paris">paris</p>
-        <p id="londre">londre</p>
-        <p id="beijing">beijing</p>
-        <p id="resto_thiou">Resto Thiou</p>
+  </head>
+  <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Les restos</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="#">TODO</a>
+            </li>
+            <li>
+              <a href="#">TODO</a>
+            </li>
+            <li>
+              <a href="#">TODO</a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.navbar-collapse -->
       </div>
-
-      <script>
-        function initMap() {
-          var map = new google.maps.Map(document.getElementById('map'), {
-            center: {
-              lat: 48.856,
-              lng: 2.352
-            },
-            zoom: 13
-          });
-          var input = /** @type {!HTMLInputElement} */ (
-            document.getElementById('pac-input'));
-
-          var types = document.getElementById('type-selector');
-          map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
-          map.controls[google.maps.ControlPosition.TOP_LEFT].push(types);
-
-          var autocomplete = new google.maps.places.Autocomplete(input);
-          autocomplete.bindTo('bounds', map);
-
-          var infowindow = new google.maps.InfoWindow();
-          var marker = new google.maps.Marker({
-            map: map,
-            anchorPoint: new google.maps.Point(0, -29)
-          });
-
-          autocomplete.addListener('place_changed', function() {
-            infowindow.close();
-            marker.setVisible(false);
-            var place = autocomplete.getPlace();
-            if (!place.geometry) {
-              window.alert("Autocomplete's returned place contains no geometry");
-              return;
-            }
-
-            // If the place has a geometry, then present it on a map.
-            if (place.geometry.viewport) {
-              map.fitBounds(place.geometry.viewport);
-            } else {
-              map.setCenter(place.geometry.location);
-              map.setZoom(17);
-            }
-            marker.setIcon( /** @type {google.maps.Icon} */ ({
-              url: place.icon,
-              size: new google.maps.Size(71, 71),
-              origin: new google.maps.Point(0, 0),
-              anchor: new google.maps.Point(17, 34),
-              scaledSize: new google.maps.Size(35, 35)
-            }));
-            marker.setPosition(place.geometry.location);
-            marker.setVisible(true);
-
-            var address = '';
-            if (place.address_components) {
-              address = [
-                (place.address_components[0] && place.address_components[0].short_name || ''), (place.address_components[1] && place.address_components[1].short_name || ''), (place.address_components[2] && place.address_components[2].short_name ||
-                  '')
-              ].join(' ');
-            }
-
-            infowindow.setContent('<div><strong>' + place.name + '</strong><br>' + address);
-            infowindow.open(map, marker);
-          });
-
-          // Sets a listener on a radio button to change the filter type on Places
-          // Autocomplete.
-          function setupClickListener(id, types) {
-            var radioButton = document.getElementById(id);
-            radioButton.addEventListener('click', function() {
-              autocomplete.setTypes(types);
-            });
-          }
-
-          setupClickListener('changetype-all', []);
-          setupClickListener('changetype-address', ['address']);
-          setupClickListener('changetype-establishment', ['establishment']);
-          setupClickListener('changetype-geocode', ['geocode']);
-        }
-
-        // Adds a marker to the map.
-        function addMarker(location, map) {
-          // Add the marker at the clicked location, and add the next-available label
-          // from the array of alphabetical characters.
-          var marker = new google.maps.Marker({
-            position: location,
-            map: map
-          });
-        }
-
-        function changePosition(latLng, zoom, title) {
-          var map = new google.maps.Map(document.getElementById('map'), {
-            zoom: zoom,
-            center: latLng,
-            title: title
-          });
-          addMarker(latLng, map);
-        }
-
-        //google.maps.event.addDomListener(window, 'load', initMap);
+      <!-- /.container -->
+    </nav>
+    <!-- Page Content -->
+    <div class="container">
+      <!-- Portfolio Item Heading -->
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 class="page-header">Plan Resto
+          <small>Le plan du restaurant</small>
+          </h1>
+        </div>
+      </div>
+      <!-- /.row -->
+      <!-- Portfolio Item Row -->
+      <div class="row">
+        <div class="col-md-8">
+          <div id="map"></div>
+        </div>
+        <div class="col-md-4">
+          <h3>Liste de mes restos </h3>
+          <ul class="list-group" id="restos">
+            <li class="list-group-item" id="resto_shu">Resto SHU</li>
+            <li class="list-group-item" id="londre">La Vache et le Cuisinier</li>
+            <li class="list-group-item" id="beijing">Les Grillades de Buenos Aires</li>
+            <li class="list-group-item" id="resto_thiou">Resto Thiou</li>
+          </ul>
+        </div>
+      </div>
+      <!-- /.row -->
+      <!-- Related Projects Row -->
+      <div class="row">
+        <div class="col-lg-12">
+          <h3 class="page-header">TODO : Permet d'ajouter un resto </h3>
+        </div>
+      </div>
+      <!-- /.row -->
+      <hr>
+      <!-- Footer -->
+      <footer>
+        <div class="row">
+          <div class="col-lg-12">
+            <p>Copyright &copy; Les restaurants 2016</p>
+          </div>
+        </div>
+        <!-- /.row -->
+      </footer>
+    </div>
+    <!-- /.container -->
 
 
-        $(document).ready(function() { // Jquery start
-
-          $("#paris").click(function() {
-            changePosition({
-              lat: 48.856,
-              lng: 2.352
-            }, 12, "paris");
-          });
-
-          $("#londre").click(function() {
-            changePosition({
-              lat: 51.507,
-              lng: -0.127
-            }, 12, "londre");
-          });
-
-          $("#beijing").click(function() {
-            changePosition({
-              lat: 39.904,
-              lng: 116.407
-            }, 12, "bei jing");
-          });
-
-          $("#resto_thiou").click(function() {
-            changePosition({
-              lat: 48.862,
-              lng: 2.309
-            }, 17, "Resto Thiou");
-          });
 
 
-        }); // Jquery end
-      </script>
-      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyoQA18Vsk4RBODcP5pvQMEFnlupQqsS4&signed_in=true&libraries=places&callback=initMap" async defer></script>
-</body>
-
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyoQA18Vsk4RBODcP5pvQMEFnlupQqsS4&signed_in=true&libraries=places&callback=initMap" async defer></script>
+    <!-- JS -->
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
+    
+  </body>
 </html>
