update the project lesrestos

--- a/lesrestos/index.html
+++ b/lesrestos/index.html
@@ -65,10 +65,10 @@
         <div class="col-md-4">
           <h3>Liste de mes restos </h3>
           <ul class="list-group" id="restos">
-            <li class="list-group-item" id="resto_shu">Resto SHU</li>
-            <li class="list-group-item" id="londre">La Vache et le Cuisinier</li>
-            <li class="list-group-item" id="beijing">Les Grillades de Buenos Aires</li>
-            <li class="list-group-item" id="resto_thiou">Resto Thiou</li>
+            <li class="list-group-item" id="resto_1">Resto SHU</li>
+            <li class="list-group-item" id="resto_2">La Vache et le Cuisinier</li>
+            <li class="list-group-item" id="resto_3">Les Grillades de Buenos Aires</li>
+            <li class="list-group-item" id="resto_4">Resto Thiou</li>
           </ul>
         </div>
       </div>
