update project lesrestos

--- a/lesrestos/index.html
+++ b/lesrestos/index.html
@@ -12,6 +12,7 @@
     <!-- Custom CSS -->
     <link href="css/portfolio-item.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link rel=icon href=favicon.ico>
 
   </head>
   <body>
@@ -20,13 +21,7 @@
       <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Les restos</a>
+          <a class="navbar-brand" href="#"><img id="nav-img" src="img/city.png">Les restos</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -65,10 +60,6 @@
         <div class="col-md-4">
           <h3>Liste de mes restos </h3>
           <ul class="list-group" id="restos">
-            <li class="list-group-item" id="resto_1">Resto SHU</li>
-            <li class="list-group-item" id="resto_2">La Vache et le Cuisinier</li>
-            <li class="list-group-item" id="resto_3">Les Grillades de Buenos Aires</li>
-            <li class="list-group-item" id="resto_4">Resto Thiou</li>
           </ul>
         </div>
       </div>
@@ -92,8 +83,6 @@
       </footer>
     </div>
     <!-- /.container -->
-
-
 
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAyoQA18Vsk4RBODcP5pvQMEFnlupQqsS4&signed_in=true&libraries=places&callback=initMap" async defer></script>
