update les restos

--- a/lesrestos/index.html
+++ b/lesrestos/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="css/portfolio-item.css" rel="stylesheet">
+    <!-- <link href="css/portfolio-item.css" rel="stylesheet"> -->
     <link href="css/main.css" rel="stylesheet">
     <link rel=icon href=favicon.ico>
 </head>
@@ -45,7 +45,7 @@
     <!-- Page Content -->
     <div class="container">
         <!-- Row titre du plan resto-->
-        <div class="row">
+        <div class="row" style="margin-top: 20px;">
             <div class="col-lg-12">
                 <h1 class="page-header">Plan Resto
                 <small>Le plan du restaurant</small>
@@ -80,7 +80,7 @@
                 <input id="pac-input" class="controls" type="text" placeholder="Search Box">
                 <div id="map2"></div>
             </div>
-            
+
         </div>
         <!-- /.row -->
         <hr>
