mise en place le backoffice par OpenShift

--- a/lesrestos/index.html
+++ b/lesrestos/index.html
@@ -103,7 +103,7 @@
     <script type="text/javascript" src="js/main.js"></script>
     <!-- Scroll -->
     <script type="text/javascript" src="js/jquery.slimscroll.min.js"></script>
-    <script type="text/javascript" src="js/jquery.fullpage.min.js"></script>
+    <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
 </body>
 
 </html>
