--- a/cv/fr/index.html
+++ b/cv/fr/index.html
@@ -27,6 +27,7 @@
 
         <div id="name">
             <h1 class="quickFade delayTwo">CUI Bo</h1>
+            <h2 class="quickFade delayThree">Tech Leader</h2>
             <h2 class="quickFade delayThree">Concepteur D&eacute;veloppeur</h2>
         </div>
 
@@ -65,7 +66,7 @@
                 <article>
                     <a href="http://www.laposte.fr"><h2>La Poste</h2></a>
                     <p class="subDetails">Septembre 2011 - Pr&eacute;sent</p>
-                    <p>Concepteur et développeur à La Poste.</p>
+                    <p>Concepteur et d&eacute;veloppeur &agrave; La Poste.</p>
                     <p>Full Stack Developer on the way :</p>
 
                     <div id="accordion">
@@ -73,7 +74,7 @@
                         <div>
                             <ul>
                                 <li>Linux and basic shell scripting => OK</li>
-                                <li>Cloud computing: Aliyun Linode => OK</li>
+                                <li>Cloud computing => OK</li>
                                 <li>Caching: Memcached => OK</li>
                             </ul>
                         </div>
@@ -87,6 +88,7 @@
                         <h3>3. Back-end tech</h3>
                         <div>
                             <ul>
+                                <li>Java/SpringBoot => OK</li>
                                 <li>Web servers: Apache => OK; Nginx => Not yet (but failliar with Apache) => OK</li>
                                 <li>Programming language: PHP,wordpress,Laravel,PHPCMS => OK (PHP, my native development
                                     language) => OK
@@ -97,6 +99,7 @@
                         <h3>4. Front-end tech</h3>
                         <div>
                             <ul>
+                                <li>Angular => OK</li>
                                 <li>HTML / HTML5: Semantic web => OK</li>
                                 <li>CSS / CSS3: BootStrap => OK</li>
                                 <li>JavaScript: jQuery, BootStrap => OK</li>
@@ -120,6 +123,10 @@
                         <h3>7. Basic IT Skill</h3>
                         <div>
                             <p>Word Excel PPT => OK</p>
+                        </div>
+                        <h3>8. Documentation/Outils</h3>
+                        <div>
+                            <p>Atlassian/Confluence => OK</p>
                         </div>
                     </div>
 
